private_key_generator/tests/compile_fails/version_lifetime_too_short.stderr
error[E0080]: evaluation of `<private_key_generator::VersioningConfig<0, 599, 32, 56, 5, 1000000000> as private_key_generator::VersionConfig>::VERSION_LIFETIME` failed
 --> src/key_generator.rs
  |
  | /                     [ /* VersionConfig::VERSION_LIFETIME must be greater than or equal to 10 minutes (600 seconds) */ ]
  | |                         [VERSION_LIFETIME as usize]
  | |___________________________________________________^ index out of bounds: the length is 0 but the index is 599

note: the above error was encountered while instantiating `fn private_key_generator::KeyGenerator::<sha2::digest::core_api::CoreWrapper<hkdf::hmac::HmacCore<sha2::digest::core_api::CoreWrapper<sha2::digest::core_api::CtVariableCoreWrapper<sha2::Sha256VarCore, private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UTerm, private_key_generator::prelude::B1>, private_key_generator::prelude::B0>, private_key_generator::prelude::B0>, private_key_generator::prelude::B0>, private_key_generator::prelude::B0>, private_key_generator::prelude::B0>, sha2::OidSha256>>>>, private_key_generator::VersioningConfig<0, 599, 32, 56, 5, 1000000000>, private_key_generator::prelude::ChaCha8Rng, sha2::digest::core_api::CoreWrapper<sha2::digest::core_api::CtVariableCoreWrapper<sha2::Sha256VarCore, private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UTerm, private_key_generator::prelude::B1>, private_key_generator::prelude::B0>, private_key_generator::prelude::B0>, private_key_generator::prelude::B0>, private_key_generator::prelude::B0>, private_key_generator::prelude::B0>, sha2::OidSha256>>>::get_current_version`
   --> src/key_generator.rs
    |
    |         let current_version = Self::get_current_version();
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
